base/RecommendationService/deployment-recommendationservice.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
        - name: recommendationservice
          image: "ghcr.io/coendv/group1-recommendationservice:dev"
          ports:
            - containerPort: 8084
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
