base/RecommendationService/service-recommendationservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  labels:
    app: recommendationservice
spec:
  selector:
    app: recommendationservice
  ports:
    - name: http
      protocol: TCP
      port: 8084
      targetPort: 8084
